Fixed broken table sorting and started on eksemplarer functionallity

--- a/arbejdsopgave.html
+++ b/arbejdsopgave.html
@@ -347,18 +347,15 @@ Nørregade 56
                           >
                             <thead>
                               <tr>
-                                <th scope="col">Præfiks</th>
-                                <th scope="col">Arkivskaber</th>
+                                <th scope="col">Navn</th>
+                                <th scope="col">Type</th>
                                 <th scope="col">HE-Navn</th>
                                 <th scope="col">HE-Fra</th>
                                 <th scope="col">HE-Til</th>
                                 <th scope="col">Eks. Type</th>
                                 <th scope="col">Eks. Navn</th>
                                 <th scope="col">Sort. felt.</th>
-                                <th
-                                  scope="col"
-                                  style="visibility: hidden;"
-                                ></th>
+                                <th scope="col" class="hidden"></th>
                               </tr>
                             </thead>
                             <tbody>
