--- a/arkivskaber.html
+++ b/arkivskaber.html
@@ -330,9 +330,9 @@
                           <div class="card bg-white ml-3 mr-3">
                             <div class="card-body p-0 m-0">
                               <table
-                                id=""
+                                id="navne-tabel"
                                 width="100%"
-                                class="table sorting table-striped table-hover mb-0"
+                                class="table table-hover sorting table-striped mb-0"
                               >
                                 <thead>
                                   <tr>
@@ -347,10 +347,10 @@
                                 <tbody>
                                   <tr class="readonly">
                                     <td>
-                                      FRB Politi
+                                      Sis Politi
                                     </td>
                                     <td>Ordensmagt Røverier</td>
-                                    <td>1987</td>
+                                    <td>4243</td>
                                     <td>1988</td>
                                     <td>Officielt</td>
                                     <td width="25" class="text-right">
@@ -692,7 +692,7 @@ of Lorem Ipsum.
                             </div>
                             <div class="card mb-5">
                               <table
-                                id="overordnedeaktoerer"
+                                id="overordnedeaktoerer-tabel"
                                 class="table sorting table-hover table-striped mb-0"
                                 width="100%"
                               >
@@ -850,8 +850,8 @@ of Lorem Ipsum.
                             </div>
                             <div class="card">
                               <table
-                                id=""
-                                class="table sorting tabledisplay table-hover table-striped mb-0"
+                                id="underordnedeaktoerer-tabel"
+                                class="table sorting table-hover table-striped mb-0"
                                 width="100%"
                               >
                                 <thead>
@@ -866,6 +866,47 @@ of Lorem Ipsum.
                                 </thead>
 
                                 <tbody>
+                                  <tr class="readonly">
+                                    <td>
+                                      <a href="/arkivskaber.html"
+                                        >Soisd Politi</a
+                                      >
+                                    </td>
+                                    <td>1972</td>
+                                    <td>1988</td>
+                                    <td>Kaldenavn</td>
+                                    <td width="25" class="text-right">
+                                      <a href="#" class="edit icon">
+                                        <svg
+                                          xmlns="http://www.w3.org/2000/svg"
+                                          width="20"
+                                          height="20"
+                                          viewBox="0 0 20 20"
+                                        >
+                                          <path
+                                            fill="#000"
+                                            fill-rule="nonzero"
+                                            d="M18.76 4.878a10.555 10.555 0 0 0-1.59-2.026 10.563 10.563 0 0 0-2.063-1.595L16.364 0s1.818 0 2.727.91C20 1.817 20 3.635 20 3.635l-1.24 1.242zM8.181 15.455H4.545v-3.637l.437-.436a7.624 7.624 0 0 1 3.636 3.636l-.436.437zm9.527-9.528l-8.042 8.041a10.502 10.502 0 0 0-3.652-3.62l8.058-8.057a7.594 7.594 0 0 1 3.636 3.636zm-14.982-3.2v14.546h14.546v-6.364L20 8.147v10.035A1.818 1.818 0 0 1 18.182 20H1.818A1.818 1.818 0 0 1 0 18.182V1.818C0 .815.815 0 1.818 0h10.01L9.098 2.727H2.727z"
+                                          />
+                                        </svg>
+                                      </a>
+                                    </td>
+                                    <td width="25" class="text-right">
+                                      <a href="#" class="delete icon">
+                                        <svg
+                                          xmlns="http://www.w3.org/2000/svg"
+                                          width="24"
+                                          height="24"
+                                          viewBox="0 0 12 16"
+                                        >
+                                          <path
+                                            fill-rule="evenodd"
+                                            d="M11 2H9c0-.55-.45-1-1-1H5c-.55 0-1 .45-1 1H2c-.55 0-1 .45-1 1v1c0 .55.45 1 1 1v9c0 .55.45 1 1 1h7c.55 0 1-.45 1-1V5c.55 0 1-.45 1-1V3c0-.55-.45-1-1-1zm-1 12H3V5h1v8h1V5h1v8h1V5h1v8h1V5h1v9zm1-10H2V3h9v1z"
+                                          />
+                                        </svg>
+                                      </a>
+                                    </td>
+                                  </tr>
                                   <tr class="readonly">
                                     <td>
                                       <a href="/arkivskaber.html"
@@ -905,6 +946,61 @@ of Lorem Ipsum.
                                           />
                                         </svg>
                                       </a>
+                                    </td>
+                                  </tr>
+                                  <tr class="write">
+                                    <td>
+                                      <div class="form-group mb-0">
+                                        <input
+                                          type="text"
+                                          class="form-control"
+                                          value="Ordensmagt Røverier"
+                                        />
+                                      </div>
+                                    </td>
+                                    <td>
+                                      <div class="form-group mb-0">
+                                        <input
+                                          type="text"
+                                          class="form-control"
+                                          value="1987"
+                                        />
+                                      </div>
+                                    </td>
+                                    <td>
+                                      <div class="form-group mb-0">
+                                        <input
+                                          type="text"
+                                          class="form-control"
+                                          value="1997"
+                                        />
+                                      </div>
+                                    </td>
+                                    <td>
+                                      <div class="form-group mb-0">
+                                        <select
+                                          class="form-control"
+                                          id="exampleFormControlSelect1"
+                                        >
+                                          <option>Officielt</option>
+                                          <option>2</option>
+                                          <option>3</option>
+                                          <option>4</option>
+                                          <option>5</option>
+                                        </select>
+                                      </div>
+                                    </td>
+                                    <td width="25" class="text-right">
+                                      <button class="btn btn-sm save">
+                                        Annuller
+                                      </button>
+                                    </td>
+                                    <td width="25" class="text-right">
+                                      <button
+                                        class="btn btn-primary btn-sm save"
+                                      >
+                                        Gem
+                                      </button>
                                     </td>
                                   </tr>
                                   <tr class="write">
@@ -1027,8 +1123,8 @@ of Lorem Ipsum.
                             </div>
                             <div class="card">
                               <table
-                                id=""
-                                class="table sorting tabledisplay table-hover table-striped mb-0"
+                                id="heuristiskeenheder-tabel"
+                                class="table sorting table-hover table-striped mb-0"
                                 width="100%"
                               >
                                 <thead>
@@ -1119,7 +1215,7 @@ of Lorem Ipsum.
                             </div>
                             <div class="card">
                               <table
-                                id="proveniensnr"
+                                id="proveniensnr-tabel"
                                 class="table sorting table-hover table-striped mb-0"
                                 width="100%"
                               >
@@ -1181,7 +1277,7 @@ of Lorem Ipsum.
                             </div>
                             <div class="card">
                               <table
-                                id="andenarkivalie"
+                                id="andenarkivalie-tabel"
                                 class="table sorting table-hover table-striped mb-0"
                                 width="100%"
                               >
@@ -1358,7 +1454,7 @@ of Lorem Ipsum.
                             </div>
                             <div class="card">
                               <table
-                                id="henvisning"
+                                id="henvisning-tabel"
                                 class="table sorting table-hover table-striped mb-0"
                                 width="100%"
                               >
@@ -2197,7 +2293,7 @@ of Lorem Ipsum.
                     <td>FRB Politi</td>
                     <td>Frederiksberg Politi</td>
                     <td>1988</td>
-                    <td>2020</td>
+                    <td>2040</td>
                     <td>Papir</td>
                   </tr>
                   <tr class="clickable-checkbox">
