Several changes to arkivskaber

--- a/arkivskaber.html
+++ b/arkivskaber.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="src/css/custom.css" />
-    <title>Daisy RA</title>
+    <title>Arkivskaber - Daisy RA</title>
   </head>
 
   <body class="bg-light">
@@ -1143,9 +1143,8 @@ of Lorem Ipsum.
                                   <tr class="readonly">
                                     <td>
                                       <a
-                                        href="#"
-                                        data-toggle="modal"
-                                        data-target="#visningheuristiskenhed"
+                                        target="_blank"
+                                        href="/heuristiskenhed.html"
                                         >Frederiksberg Politi</a
                                       >
                                     </td>
@@ -1559,75 +1558,6 @@ of Lorem Ipsum.
                 </div>
               </div>
             </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Modal Heuristisk Enhed Visning -->
-    <div
-      class="modal fade"
-      id="visningheuristiskenhed"
-      tabindex="-1"
-      role="dialog"
-      aria-labelledby="visningheuristiskenhedModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog modal-xl" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5
-              class="modal-title font-weight-bold"
-              id="visningheuristiskenhedModalLabel"
-            >
-              Heuristisk Enhed
-            </h5>
-            <button
-              type="button"
-              class="btn close"
-              data-dismiss="modal"
-              aria-label="Close"
-            >
-              <span aria-hidden="true">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="24"
-                  height="24"
-                  viewBox="0 0 12 16"
-                >
-                  <path
-                    fill-rule="evenodd"
-                    d="M7.48 8l3.75 3.75-1.48 1.48L6 9.48l-3.75 3.75-1.48-1.48L4.52 8 .77 4.25l1.48-1.48L6 6.52l3.75-3.75 1.48 1.48L7.48 8z"
-                  />
-                </svg>
-              </span>
-            </button>
-          </div>
-          <div class="modal-body pb-0">
-            <div class="d-flex justify-content-end align-items-center mb-3">
-              <a href="/heuristiskenhed.html">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="24"
-                  height="24"
-                  viewBox="0 0 12 16"
-                >
-                  <path
-                    fill-rule="evenodd"
-                    d="M11 10h1v3c0 .55-.45 1-1 1H1c-.55 0-1-.45-1-1V3c0-.55.45-1 1-1h3v1H1v10h10v-3zM6 2l2.25 2.25L5 7.5 6.5 9l3.25-3.25L12 8V2H6z"
-                  />
-                </svg>
-                <span class="ml-1">Åben i nyt vindue</span>
-              </a>
-            </div>
-            <div class="card mb-3">
-              lol
-            </div>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-primary" data-dismiss="modal">
-              <span>Luk</span>
-            </button>
           </div>
         </div>
       </div>
