--- a/omdaisy.html
+++ b/omdaisy.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="src/css/custom.css" />
-    <title>Om Daisy</title>
+    <title>Om Daisy - Daisy RA</title>
   </head>
   <body class="bg-light">
     <div class="container-fluid">
