--- a/search/search-heuristiskenhed.html
+++ b/search/search-heuristiskenhed.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../src/css/custom.css" />
-    <title>Daisy RA</title>
+    <title>Søgeresultat - Heuristisk Enhed - Daisy RA</title>
   </head>
 
   <body class="bg-light">
