--- a/arbejdsopgave.html
+++ b/arbejdsopgave.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="src/css/custom.css" />
-    <title>Daisy RA</title>
+    <title>Arbejdsopgave - Daisy RA</title>
   </head>
 
   <body class="bg-light">
@@ -609,7 +609,11 @@ Nørregade 56
                 viewBox="0 0 12 16"
                 class="mr-2"
               >
-                <path fill-rule="evenodd" d="M12 9H7v5H5V9H0V7h5V2h2v5h5v2z" />
+                <path
+                  fill="#fff"
+                  fill-rule="evenodd"
+                  d="M12 9H7v5H5V9H0V7h5V2h2v5h5v2z"
+                />
               </svg>
               <span>Tilføj</span>
             </button>
