--- a/heuristiskenhed.html
+++ b/heuristiskenhed.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="src/css/custom.css" />
-    <title>Daisy RA</title>
+    <title>Heuristisk Enhed - Daisy RA</title>
   </head>
 
   <body class="bg-light">
@@ -1351,6 +1351,9 @@ of Lorem Ipsum.
                             data-parent="#accordionExample"
                           >
                             <div class="card-body">
+                              <h4 class="font-weight-bold mt-3 mb-3">
+                                Eksx14
+                              </h4>
                               <div class="row">
                                 <div class="col-sm-4">
                                   <div class="form-group mb-3">
@@ -1398,7 +1401,7 @@ of Lorem Ipsum.
                                   <div class="form-check">
                                     <input
                                       type="checkbox"
-                                      class="form-check-input"
+                                      class="form-check-input maaudlaanes"
                                       id="maaudlaanes"
                                     />
                                     <label
@@ -1457,6 +1460,82 @@ of Lorem Ipsum.
                                       rows="10"
                                     ></textarea>
                                   </div>
+                                </div>
+                              </div>
+                              <div class="row">
+                                <div class="col-sm-12">
+                                  <h4 class="font-weight-bold mt-3">
+                                    Magasinenhed / Billedserie
+                                  </h4>
+                                  <div class="card">
+                                    <div class="card-body p-0 m-0">
+                                      <table
+                                        id="magasinenhed-tabel"
+                                        class="table sorting table-hover table-striped mb-0"
+                                        width="100%"
+                                      >
+                                        <thead>
+                                          <tr>
+                                            <th scope="col">Stregkode</th>
+                                            <th scope="col">Løber</th>
+                                            <th scope="col">Type</th>
+                                            <th scope="col">Første</th>
+                                            <th scope="col">Sidste</th>
+                                            <th scope="col">Plads Sti</th>
+                                            <th scope="col" class="hidden"></th>
+                                            <th scope="col" class="hidden"></th>
+                                          </tr>
+                                        </thead>
+
+                                        <tbody>
+                                          <tr>
+                                            <td>5+DG-001</td>
+                                            <td>5+DG-001</td>
+                                            <td>5+DG-001</td>
+                                            <td>5+DG-001</td>
+                                            <td>5+DG-001</td>
+                                            <td>5+DG-001</td>
+                                            <td width="25" class="text-right">
+                                              <a href="#" class="edit icon">
+                                                <svg
+                                                  xmlns="http://www.w3.org/2000/svg"
+                                                  width="20"
+                                                  height="20"
+                                                  viewBox="0 0 20 20"
+                                                >
+                                                  <path
+                                                    fill="#000"
+                                                    fill-rule="nonzero"
+                                                    d="M18.76 4.878a10.555 10.555 0 0 0-1.59-2.026 10.563 10.563 0 0 0-2.063-1.595L16.364 0s1.818 0 2.727.91C20 1.817 20 3.635 20 3.635l-1.24 1.242zM8.181 15.455H4.545v-3.637l.437-.436a7.624 7.624 0 0 1 3.636 3.636l-.436.437zm9.527-9.528l-8.042 8.041a10.502 10.502 0 0 0-3.652-3.62l8.058-8.057a7.594 7.594 0 0 1 3.636 3.636zm-14.982-3.2v14.546h14.546v-6.364L20 8.147v10.035A1.818 1.818 0 0 1 18.182 20H1.818A1.818 1.818 0 0 1 0 18.182V1.818C0 .815.815 0 1.818 0h10.01L9.098 2.727H2.727z"
+                                                  />
+                                                </svg>
+                                              </a>
+                                            </td>
+                                            <td width="25" class="text-right">
+                                              <a href="#" class="delete icon">
+                                                <svg
+                                                  xmlns="http://www.w3.org/2000/svg"
+                                                  width="24"
+                                                  height="24"
+                                                  viewBox="0 0 12 16"
+                                                >
+                                                  <path
+                                                    fill-rule="evenodd"
+                                                    d="M11 2H9c0-.55-.45-1-1-1H5c-.55 0-1 .45-1 1H2c-.55 0-1 .45-1 1v1c0 .55.45 1 1 1v9c0 .55.45 1 1 1h7c.55 0 1-.45 1-1V5c.55 0 1-.45 1-1V3c0-.55-.45-1-1-1zm-1 12H3V5h1v8h1V5h1v8h1V5h1v8h1V5h1v9zm1-10H2V3h9v1z"
+                                                  />
+                                                </svg>
+                                              </a>
+                                            </td>
+                                          </tr>
+                                        </tbody>
+                                      </table>
+                                    </div>
+                                  </div>
+                                  <button
+                                    class="btn btn-outline-primary mt-3 mb-4"
+                                  >
+                                    Vis arbejdsopgaver
+                                  </button>
                                 </div>
                               </div>
                             </div>
@@ -1513,6 +1592,9 @@ of Lorem Ipsum.
                             data-parent="#accordionExample"
                           >
                             <div class="card-body">
+                              <h4 class="font-weight-bold mt-3 mb-3">
+                                Eksx15
+                              </h4>
                               <div class="row">
                                 <div class="col-sm-4">
                                   <div class="form-group mb-3">
@@ -1560,7 +1642,7 @@ of Lorem Ipsum.
                                   <div class="form-check">
                                     <input
                                       type="checkbox"
-                                      class="form-check-input"
+                                      class="form-check-input maaudlaanes"
                                       id="maaudlaanes"
                                     />
                                     <label
@@ -1621,6 +1703,82 @@ of Lorem Ipsum.
                                   </div>
                                 </div>
                               </div>
+                              <div class="row">
+                                <div class="col-sm-12">
+                                  <h4 class="font-weight-bold mt-3">
+                                    Magasinenhed / Billedserie
+                                  </h4>
+                                  <div class="card">
+                                    <div class="card-body p-0 m-0">
+                                      <table
+                                        id="magasinenhed-tabel"
+                                        class="table sorting table-hover table-striped mb-0"
+                                        width="100%"
+                                      >
+                                        <thead>
+                                          <tr>
+                                            <th scope="col">Stregkode</th>
+                                            <th scope="col">Løber</th>
+                                            <th scope="col">Type</th>
+                                            <th scope="col">Første</th>
+                                            <th scope="col">Sidste</th>
+                                            <th scope="col">Plads Sti</th>
+                                            <th scope="col" class="hidden"></th>
+                                            <th scope="col" class="hidden"></th>
+                                          </tr>
+                                        </thead>
+
+                                        <tbody>
+                                          <tr>
+                                            <td>5+DG-001</td>
+                                            <td>5+DG-001</td>
+                                            <td>5+DG-001</td>
+                                            <td>5+DG-001</td>
+                                            <td>5+DG-001</td>
+                                            <td>5+DG-001</td>
+                                            <td width="25" class="text-right">
+                                              <a href="#" class="edit icon">
+                                                <svg
+                                                  xmlns="http://www.w3.org/2000/svg"
+                                                  width="20"
+                                                  height="20"
+                                                  viewBox="0 0 20 20"
+                                                >
+                                                  <path
+                                                    fill="#000"
+                                                    fill-rule="nonzero"
+                                                    d="M18.76 4.878a10.555 10.555 0 0 0-1.59-2.026 10.563 10.563 0 0 0-2.063-1.595L16.364 0s1.818 0 2.727.91C20 1.817 20 3.635 20 3.635l-1.24 1.242zM8.181 15.455H4.545v-3.637l.437-.436a7.624 7.624 0 0 1 3.636 3.636l-.436.437zm9.527-9.528l-8.042 8.041a10.502 10.502 0 0 0-3.652-3.62l8.058-8.057a7.594 7.594 0 0 1 3.636 3.636zm-14.982-3.2v14.546h14.546v-6.364L20 8.147v10.035A1.818 1.818 0 0 1 18.182 20H1.818A1.818 1.818 0 0 1 0 18.182V1.818C0 .815.815 0 1.818 0h10.01L9.098 2.727H2.727z"
+                                                  />
+                                                </svg>
+                                              </a>
+                                            </td>
+                                            <td width="25" class="text-right">
+                                              <a href="#" class="delete icon">
+                                                <svg
+                                                  xmlns="http://www.w3.org/2000/svg"
+                                                  width="24"
+                                                  height="24"
+                                                  viewBox="0 0 12 16"
+                                                >
+                                                  <path
+                                                    fill-rule="evenodd"
+                                                    d="M11 2H9c0-.55-.45-1-1-1H5c-.55 0-1 .45-1 1H2c-.55 0-1 .45-1 1v1c0 .55.45 1 1 1v9c0 .55.45 1 1 1h7c.55 0 1-.45 1-1V5c.55 0 1-.45 1-1V3c0-.55-.45-1-1-1zm-1 12H3V5h1v8h1V5h1v8h1V5h1v8h1V5h1v9zm1-10H2V3h9v1z"
+                                                  />
+                                                </svg>
+                                              </a>
+                                            </td>
+                                          </tr>
+                                        </tbody>
+                                      </table>
+                                    </div>
+                                  </div>
+                                  <button
+                                    class="btn btn-outline-primary mt-3 mb-4"
+                                  >
+                                    Vis arbejdsopgaver
+                                  </button>
+                                </div>
+                              </div>
                             </div>
                           </div>
                         </div>
@@ -1675,6 +1833,9 @@ of Lorem Ipsum.
                             data-parent="#accordionExample"
                           >
                             <div class="card-body">
+                              <h4 class="font-weight-bold mt-3 mb-3">
+                                Eksx16
+                              </h4>
                               <div class="row">
                                 <div class="col-sm-4">
                                   <div class="form-group mb-3">
@@ -1722,7 +1883,7 @@ of Lorem Ipsum.
                                   <div class="form-check">
                                     <input
                                       type="checkbox"
-                                      class="form-check-input"
+                                      class="form-check-input maaudlaanes"
                                       id="maaudlaanes"
                                     />
                                     <label
@@ -1781,6 +1942,82 @@ of Lorem Ipsum.
                                       rows="10"
                                     ></textarea>
                                   </div>
+                                </div>
+                              </div>
+                              <div class="row">
+                                <div class="col-sm-12">
+                                  <h4 class="font-weight-bold mt-3">
+                                    Magasinenhed / Billedserie
+                                  </h4>
+                                  <div class="card">
+                                    <div class="card-body p-0 m-0">
+                                      <table
+                                        id="magasinenhed-tabel"
+                                        class="table sorting table-hover table-striped mb-0"
+                                        width="100%"
+                                      >
+                                        <thead>
+                                          <tr>
+                                            <th scope="col">Stregkode</th>
+                                            <th scope="col">Løber</th>
+                                            <th scope="col">Type</th>
+                                            <th scope="col">Første</th>
+                                            <th scope="col">Sidste</th>
+                                            <th scope="col">Plads Sti</th>
+                                            <th scope="col" class="hidden"></th>
+                                            <th scope="col" class="hidden"></th>
+                                          </tr>
+                                        </thead>
+
+                                        <tbody>
+                                          <tr>
+                                            <td>5+DG-001</td>
+                                            <td>5+DG-001</td>
+                                            <td>5+DG-001</td>
+                                            <td>5+DG-001</td>
+                                            <td>5+DG-001</td>
+                                            <td>5+DG-001</td>
+                                            <td width="25" class="text-right">
+                                              <a href="#" class="edit icon">
+                                                <svg
+                                                  xmlns="http://www.w3.org/2000/svg"
+                                                  width="20"
+                                                  height="20"
+                                                  viewBox="0 0 20 20"
+                                                >
+                                                  <path
+                                                    fill="#000"
+                                                    fill-rule="nonzero"
+                                                    d="M18.76 4.878a10.555 10.555 0 0 0-1.59-2.026 10.563 10.563 0 0 0-2.063-1.595L16.364 0s1.818 0 2.727.91C20 1.817 20 3.635 20 3.635l-1.24 1.242zM8.181 15.455H4.545v-3.637l.437-.436a7.624 7.624 0 0 1 3.636 3.636l-.436.437zm9.527-9.528l-8.042 8.041a10.502 10.502 0 0 0-3.652-3.62l8.058-8.057a7.594 7.594 0 0 1 3.636 3.636zm-14.982-3.2v14.546h14.546v-6.364L20 8.147v10.035A1.818 1.818 0 0 1 18.182 20H1.818A1.818 1.818 0 0 1 0 18.182V1.818C0 .815.815 0 1.818 0h10.01L9.098 2.727H2.727z"
+                                                  />
+                                                </svg>
+                                              </a>
+                                            </td>
+                                            <td width="25" class="text-right">
+                                              <a href="#" class="delete icon">
+                                                <svg
+                                                  xmlns="http://www.w3.org/2000/svg"
+                                                  width="24"
+                                                  height="24"
+                                                  viewBox="0 0 12 16"
+                                                >
+                                                  <path
+                                                    fill-rule="evenodd"
+                                                    d="M11 2H9c0-.55-.45-1-1-1H5c-.55 0-1 .45-1 1H2c-.55 0-1 .45-1 1v1c0 .55.45 1 1 1v9c0 .55.45 1 1 1h7c.55 0 1-.45 1-1V5c.55 0 1-.45 1-1V3c0-.55-.45-1-1-1zm-1 12H3V5h1v8h1V5h1v8h1V5h1v8h1V5h1v9zm1-10H2V3h9v1z"
+                                                  />
+                                                </svg>
+                                              </a>
+                                            </td>
+                                          </tr>
+                                        </tbody>
+                                      </table>
+                                    </div>
+                                  </div>
+                                  <button
+                                    class="btn btn-outline-primary mt-3 mb-4"
+                                  >
+                                    Vis arbejdsopgaver
+                                  </button>
                                 </div>
                               </div>
                             </div>
