--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="src/css/custom.css" />
-    <title>Daisy RA</title>
+    <title>Forside - Daisy RA</title>
   </head>
   <body class="bg-light">
     <div class="container-fluid">
@@ -610,24 +610,148 @@
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title font-weight-bold" id="exampleModalLabel">
-              Opret Arkivskaber
+            <h5 class="modal-title font-weight-bold" id="nyarbopgaveModalLabel">
+              Ny arkivskaber
             </h5>
             <button
               type="button"
-              class="close"
+              class="btn close"
               data-dismiss="modal"
               aria-label="Close"
             >
-              <span aria-hidden="true">&times;</span>
+              <span aria-hidden="true">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 12 16"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    d="M7.48 8l3.75 3.75-1.48 1.48L6 9.48l-3.75 3.75-1.48-1.48L4.52 8 .77 4.25l1.48-1.48L6 6.52l3.75-3.75 1.48 1.48L7.48 8z"
+                  />
+                </svg>
+              </span>
             </button>
           </div>
           <div class="modal-body">
-            Opret ny ting
+            <div class="form-group row">
+              <label for="name" class="col-sm-4 col-form-label">Navn</label>
+              <div class="col-sm-8">
+                <input type="text" class="form-control" id="name" />
+              </div>
+            </div>
+
+            <div class="form-group row">
+              <label class="col-sm-4 col-form-label" for="praefiks"
+                >Præfiks</label
+              >
+              <div class="col-sm-8">
+                <input type="text" class="form-control" id="praefiks" />
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-sm-4 col-form-label" for="type"
+                >Dannelsestid</label
+              >
+              <div class="col-sm-8">
+                <div class="form-inline row">
+                  <input
+                    type="text"
+                    class="form-control col-sm-5 ml-3"
+                    placeholder="fra"
+                    id="name"
+                  />
+                  <input
+                    type="text"
+                    class="form-control col-sm-5 ml-4"
+                    placeholder="til"
+                    id="name"
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-sm-4 col-form-label" for="navnetype"
+                >Navnetype</label
+              >
+              <div class="col-sm-8">
+                <select class="form-control" id="navnetype">
+                  <option>Kaldenavn</option>
+                  <option>Officielt</option>
+                </select>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-sm-4 col-form-label" for="beskrivelsesniveau"
+                >Beskrivelsesniveau</label
+              >
+              <div class="col-sm-8">
+                <select class="form-control" id="beskrivelsesniveau">
+                  <option>1. niveau</option>
+                  <option>2. niveau</option>
+                </select>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-sm-4 col-form-label" for="type">Kladde</label>
+              <div class="col-sm-8">
+                <div class="form-check-inline">
+                  <input
+                    class="form-check-input"
+                    type="radio"
+                    name="exampleRadios"
+                    id="KladdeRadio1"
+                    value="option1"
+                    checked
+                  />
+                  <label class="form-check-label" for="KladdeRadio1">
+                    Ja
+                  </label>
+                </div>
+                <div class="form-check-inline">
+                  <input
+                    class="form-check-input"
+                    type="radio"
+                    name="exampleRadios"
+                    id="KladdeRadio2"
+                    value="option2"
+                  />
+                  <label class="form-check-label" for="KladdeRadio2">
+                    Nej
+                  </label>
+                </div>
+              </div>
+            </div>
+            <div class="form-group row mb-0">
+              <div class="col-sm-12">
+                <div class="alert alert-info text-center mb-0" role="alert">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 16 16"
+                    class="mr-3 mb-1"
+                  >
+                    <path
+                      fill="#11545F"
+                      fill-rule="evenodd"
+                      d="M8.893 1.5c-.183-.31-.52-.5-.887-.5s-.703.19-.886.5L.138 13.499a.98.98 0 0 0 0 1.001c.193.31.53.501.886.501h13.964c.367 0 .704-.19.877-.5a1.03 1.03 0 0 0 .01-1.002L8.893 1.5zm.133 11.497H6.987v-2.003h2.039v2.003zm0-3.004H6.987V5.987h2.039v4.006z"
+                    />
+                  </svg>
+                  Indhold kan tilføjes når arkivskaberen er oprettet.
+                </div>
+              </div>
+            </div>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-primary" data-dismiss="modal">
-              Opret
+            <button
+              type="button"
+              class="btn btn-primary"
+              data-dismiss="modal"
+              onclick="window.location.href='/arkivskaber.html'"
+            >
+              Opret Arkivskaber
             </button>
           </div>
         </div>
